97522292/gen/MiniJavaParser.py
# Generated from C:/Users/asus/Desktop/desk/University/99002-CD (compiler)/A4\MiniJavaParser.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJavaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'int'", "'boolean'", "'if'", 
                     "'else'", "'while'", "'System.out.println'", "'='", 
                     "'+'", "'-'", "'*'", "'<'", "'&&'", "'length'", "'!'", 
                     "'new'", "'this'", "'class'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "'.'", "'true'", 
                     "'false'", "'public'", "'static'", "'void'", "'main'", 
                     "'String'", "'extends'" ]

    symbolicNames = [ "<INVALID>", "RETURN", "INT", "BOOLEAN", "IF", "ELSE", 
                      "WHILE", "SOUT", "ASSIGN", "ADD", "SUB", "MUL", "LT", 
                      "ANDAND", "LEN", "NOT", "NEW", "THIS", "CLASS", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "DOT", "TRUE", "FALSE", "PUBLIC", 
                      "STATIC", "VOID", "MAIN", "STRING", "EXTENDS", "IDENTIFIER", 
                      "INTEGER_LITERAL", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type_ = 5
    RULE_statement = 6
    RULE_expression = 7
    RULE_identifier = 8

    ruleNames =  [ "program", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type_", "statement", "expression", 
                   "identifier" ]

    EOF = Token.EOF
    RETURN=1
    INT=2
    BOOLEAN=3
    IF=4
    ELSE=5
    WHILE=6
    SOUT=7
    ASSIGN=8
    ADD=9
    SUB=10
    MUL=11
    LT=12
    ANDAND=13
    LEN=14
    NOT=15
    NEW=16
    THIS=17
    CLASS=18
    LPAREN=19
    RPAREN=20
    LBRACE=21
    RBRACE=22
    LBRACK=23
    RBRACK=24
    SEMI=25
    COMMA=26
    DOT=27
    TRUE=28
    FALSE=29
    PUBLIC=30
    STATIC=31
    VOID=32
    MAIN=33
    STRING=34
    EXTENDS=35
    IDENTIFIER=36
    INTEGER_LITERAL=37
    WS=38
    COMMENT=39
    LINE_COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    temp_counter = 0
    goto_counter = 0

    def create_goto(self):
        self.goto_counter += 1
        return 'L' + str(self.goto_counter)

    def create_temp(self):
        self.temp_counter += 1
        return 'T' + str(self.temp_counter)

    def remove_temp(self):
        self.temp_counter -= 1

    def get_temp(self):
        return 'T' + str(self.temp_counter)



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MiniJavaParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            print('3 Code Address:')
            self.state = 19
            self.mainClass()
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.CLASS:
                self.state = 20
                self.classDeclaration()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(MiniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None # StatementContext

        def CLASS(self):
            return self.getToken(MiniJavaParser.CLASS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,i)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.LBRACE)
            else:
                return self.getToken(MiniJavaParser.LBRACE, i)

        def PUBLIC(self):
            return self.getToken(MiniJavaParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(MiniJavaParser.STATIC, 0)

        def VOID(self):
            return self.getToken(MiniJavaParser.VOID, 0)

        def MAIN(self):
            return self.getToken(MiniJavaParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(MiniJavaParser.STRING, 0)

        def LBRACK(self):
            return self.getToken(MiniJavaParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniJavaParser.RBRACK, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.RBRACE)
            else:
                return self.getToken(MiniJavaParser.RBRACE, i)

        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MiniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(MiniJavaParser.CLASS)
            self.state = 29
            self.identifier()
            self.state = 30
            self.match(MiniJavaParser.LBRACE)
            self.state = 31
            self.match(MiniJavaParser.PUBLIC)
            self.state = 32
            self.match(MiniJavaParser.STATIC)
            self.state = 33
            self.match(MiniJavaParser.VOID)
            self.state = 34
            self.match(MiniJavaParser.MAIN)
            self.state = 35
            self.match(MiniJavaParser.LPAREN)
            self.state = 36
            self.match(MiniJavaParser.STRING)
            self.state = 37
            self.match(MiniJavaParser.LBRACK)
            self.state = 38
            self.match(MiniJavaParser.RBRACK)
            self.state = 39
            self.identifier()
            self.state = 40
            self.match(MiniJavaParser.RPAREN)
            self.state = 41
            self.match(MiniJavaParser.LBRACE)
            self.state = 42
            localctx.s = self.statement()
            self.state = 43
            self.match(MiniJavaParser.RBRACE)
            self.state = 44
            self.match(MiniJavaParser.RBRACE)
            print(localctx.s.value_attr)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MiniJavaParser.CLASS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,i)


        def LBRACE(self):
            return self.getToken(MiniJavaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniJavaParser.RBRACE, 0)

        def EXTENDS(self):
            return self.getToken(MiniJavaParser.EXTENDS, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MiniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(MiniJavaParser.CLASS)
            self.state = 48
            self.identifier()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaParser.EXTENDS:
                self.state = 49
                self.match(MiniJavaParser.EXTENDS)
                self.state = 50
                self.identifier()


            self.state = 53
            self.match(MiniJavaParser.LBRACE)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.INT) | (1 << MiniJavaParser.BOOLEAN) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                self.state = 54
                self.varDeclaration()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.PUBLIC:
                self.state = 60
                self.methodDeclaration()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(MiniJavaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # Type_Context
            self.i = None # IdentifierContext

        def SEMI(self):
            return self.getToken(MiniJavaParser.SEMI, 0)

        def type_(self):
            return self.getTypedRuleContext(MiniJavaParser.Type_Context,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MiniJavaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            localctx.t = self.type_()
            self.state = 69
            localctx.i = self.identifier()
            self.state = 70
            self.match(MiniJavaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None # StatementContext

        def PUBLIC(self):
            return self.getToken(MiniJavaParser.PUBLIC, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.Type_Context)
            else:
                return self.getTypedRuleContext(MiniJavaParser.Type_Context,i)


        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,i)


        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(MiniJavaParser.LBRACE, 0)

        def RETURN(self):
            return self.getToken(MiniJavaParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MiniJavaParser.SEMI, 0)

        def RBRACE(self):
            return self.getToken(MiniJavaParser.RBRACE, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.COMMA)
            else:
                return self.getToken(MiniJavaParser.COMMA, i)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MiniJavaParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(MiniJavaParser.PUBLIC)
            self.state = 73
            self.type_()
            self.state = 74
            self.identifier()
            self.state = 75
            self.match(MiniJavaParser.LPAREN)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.INT) | (1 << MiniJavaParser.BOOLEAN) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                self.state = 76
                self.type_()
                self.state = 77
                self.identifier()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniJavaParser.COMMA:
                    self.state = 78
                    self.match(MiniJavaParser.COMMA)
                    self.state = 79
                    self.type_()
                    self.state = 80
                    self.identifier()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 89
            self.match(MiniJavaParser.RPAREN)
            self.state = 90
            self.match(MiniJavaParser.LBRACE)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.varDeclaration() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.IF) | (1 << MiniJavaParser.WHILE) | (1 << MiniJavaParser.SOUT) | (1 << MiniJavaParser.LBRACE) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                self.state = 97
                localctx.s = self.statement()
                print(localctx.s.value_attr)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(MiniJavaParser.RETURN)
            self.state = 106
            self.expression(0)
            self.state = 107
            self.match(MiniJavaParser.SEMI)
            self.state = 108
            self.match(MiniJavaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.i = None # IdentifierContext

        def INT(self):
            return self.getToken(MiniJavaParser.INT, 0)

        def LBRACK(self):
            return self.getToken(MiniJavaParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniJavaParser.RBRACK, 0)

        def BOOLEAN(self):
            return self.getToken(MiniJavaParser.BOOLEAN, 0)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_" ):
                return visitor.visitType_(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MiniJavaParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(MiniJavaParser.INT)
                self.state = 111
                self.match(MiniJavaParser.LBRACK)
                self.state = 112
                self.match(MiniJavaParser.RBRACK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(MiniJavaParser.BOOLEAN)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(MiniJavaParser.INT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                localctx.i = self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.old_value_attr = str()
            self.s = None # StatementContext
            self.e = None # ExpressionContext
            self.s1 = None # StatementContext
            self.s2 = None # StatementContext
            self.i = None # IdentifierContext
            self.e1 = None # ExpressionContext
            self.e2 = None # ExpressionContext

        def LBRACE(self):
            return self.getToken(MiniJavaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniJavaParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def IF(self):
            return self.getToken(MiniJavaParser.IF, 0)

        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)

        def ELSE(self):
            return self.getToken(MiniJavaParser.ELSE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def WHILE(self):
            return self.getToken(MiniJavaParser.WHILE, 0)

        def SOUT(self):
            return self.getToken(MiniJavaParser.SOUT, 0)

        def SEMI(self):
            return self.getToken(MiniJavaParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaParser.IdentifierContext,0)


        def LBRACK(self):
            return self.getToken(MiniJavaParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniJavaParser.RBRACK, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):
